--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 dist: xenial
 language: node_js
+
 node_js:
   - "node"
   - "8"
+  
 addons:
   apt:
     packages:
     - ffmpeg
+    
+before_install:
+  - which ffmpeg
