--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ addons:
     
 before_install:
   - which ffmpeg
+  - chmod +x ./aym.sh
 
 script: ./aym.sh https://www.youtube.com/watch?v=6Olt-ZtV_CE
